; ModuleID = '/home/carl/AnghaBench/postgres/src/timezone/extr_zic.c_eats.c'
source_filename = "/home/carl/AnghaBench/postgres/src/timezone/extr_zic.c_eats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@filename = common dso_local global i8* null, align 8
@linenum = common dso_local global i8* null, align 8
@rfilename = common dso_local global i8* null, align 8
@rlinenum = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i8*, i8*)* @eats to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @eats(i8* %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load i8*, i8** %5, align 8
  store i8* %9, i8** @filename, align 8
  %10 = load i8*, i8** %6, align 8
  store i8* %10, i8** @linenum, align 8
  %11 = load i8*, i8** %7, align 8
  store i8* %11, i8** @rfilename, align 8
  %12 = load i8*, i8** %8, align 8
  store i8* %12, i8** @rlinenum, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
